--- a/index.html
+++ b/index.html
@@ -23,16 +23,9 @@
         <div class="container h-100">
             <div class="d-flex h-100 text-center align-items-center">
                 <div class="w-100 text-white">
-                    <h1>MY WEB ADDRESS</h1>
-					<br></br>
+                    <h1>MY WEB ADDRESS</h1><p class="lead mb-0">IT'S FREE TO VISIT MY LINK</p>
 					<br></br>
              <div class="profile_links">
-			   <a class="SocialLink SocialMedia grow c-radius c-fill c-auto-border-color m-b-2" rel="nofollow noreferrer noopener" href="https://bgmoez.llovedatng.com/?utm_source=da57dc555e50572d&amp;s1=202325&amp;s2=1930503&amp;click_id=SUPREME" target="_blank">
-			     <div class="asset-logo c-radius-sm thumbnail bg-cover" style=""></div>
-				 <div class="w-100 text-white">
-				 <h3>IT'S FREE TO VISIT MY LINK</h3>
-				 </div>
-			   </a>
 			   <a class="SocialLink SocialMedia grow c-radius c-fill c-auto-border-color m-b-2" rel="nofollow noreferrer noopener" href="https://bgmoez.llovedatng.com/?utm_source=da57dc555e50572d&amp;s1=202325&amp;s2=1930503&amp;click_id=SUPREME" target="_blank">
 			     <div class="asset-logo c-radius-sm thumbnail bg-cover" style=""></div>
 				 <div class="w-100 text-white">
